--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="hero">
   <img src="images/yashaswini.jpeg" alt="Yashaswini Photo" 
        style="width:120px; height:120px; border-radius:50%; object-fit:cover; margin-bottom:12px; border:3px solid #fff;">
-  <h1>Yashaswini</h1>
+  <h1>Yashaswini R</h1>
   <p>Chartered Accountant · Finance & Accounting Professional</p>
 </header>
   <nav class="tabs">
